--- a/index.html
+++ b/index.html
@@ -4,84 +4,96 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Akashdeep Gill | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f9f9f9;
+      color: #333;
     }
     header {
-      background-color: #2c3e50;
+      background: url('A_digital_photograph_serves_as_a_header_for_Akashd.png') no-repeat center center/cover;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: white;
-      padding: 20px;
-      text-align: center;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
+    }
+    header h1 {
+      font-size: 2.5rem;
     }
     section {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
+      max-width: 1000px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+    .skills, .projects {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+    .card {
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #2c3e50;
-    }
-    ul {
-      line-height: 1.6;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      flex: 1 1 250px;
     }
     footer {
       text-align: center;
-      padding: 10px;
-      background: #2c3e50;
+      padding: 20px;
+      background: #222;
       color: white;
       margin-top: 30px;
     }
-	header img {
-  width: 100%;
-  height: auto;
-  border-radius: 0 0 20px 20px;
-  box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
-}
-
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.5rem;
+        padding: 0 10px;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-  <img src="header.jpg" alt="Header Image" style="width: 100%; height: auto; border-radius: 0 0 20px 20px;" />
-  <h1>Akashdeep Gill</h1>
-  <p>Self-Taught Developer | HTML, CSS, JS, Java, C++</p>
-</header>
-
+    <h1>Akashdeep Gill</h1>
+  </header>
 
   <section>
     <h2>About Me</h2>
-    <p>I am a self-taught programmer with a strong passion for building websites and solving real-world problems through code.</p>
+    <p>I am a self-taught developer skilled in building responsive and user-friendly websites. Passionate about learning and growing in the world of web development.</p>
   </section>
 
   <section>
     <h2>Skills</h2>
-    <ul>
-      <li>HTML5, CSS3, JavaScript</li>
-      <li>C, C++, Java</li>
-      <li>Responsive Design, Web Layouts</li>
-    </ul>
+    <div class="skills">
+      <div class="card">HTML</div>
+      <div class="card">CSS</div>
+      <div class="card">JavaScript</div>
+      <div class="card">C++</div>
+      <div class="card">Java</div>
+    </div>
   </section>
 
   <section>
     <h2>Projects</h2>
-    <ul>
-      <li>DD Seed Karnal Website (In Progress)</li>
-      <li>Portfolio Website</li>
-      <li>Personal Blog Template</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Contact</h2>
-    <p>Email: akash77221@gmail.com</p>
-    <p>Mobile: +91-7888615318</p>
+    <div class="projects">
+      <div class="card">
+        <h3>DD Seed Karnal</h3>
+        <p>A simple static website for a seed-selling firm.</p>
+      </div>
+      <div class="card">
+        <h3>Portfolio</h3>
+        <p>This website you're viewing right now!</p>
+      </div>
+    </div>
   </section>
 
   <footer>
