--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
       padding: 0;
       box-sizing: border-box;
     }
+    header { 
+  background: url('./A_digital_photograph_serves_as_a_header_for_Akashd.png') no-repeat center center/cover;
+  background-color: black; /* temp */
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
     body {
       font-family: 'Poppins', sans-serif;
       background: #f9f9f9;
