--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    
-  </header>
-
+  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
   <section>
     <h2>About Me</h2>
     <p>I am a self-taught developer skilled in building responsive and user-friendly websites. Passionate about learning and growing in the world of web development.</p>
