--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +8,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+
+  <header>
+    <div class="overlay">
+      <h1>Akashdeep Gill</h1>
+      <p>Self-taught Web Developer</p>
+    </div>
+  </header>
+
   <section>
     <h2>About Me</h2>
     <p>I am a self-taught developer skilled in building responsive and user-friendly websites. Passionate about learning and growing in the world of web development.</p>
@@ -45,5 +49,6 @@
   <footer>
     <p>© 2025 Akashdeep Gill</p>
   </footer>
+
 </body>
 </html>
