--- a/index.html
+++ b/index.html
@@ -4,53 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Akashdeep Gill | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <header>
-    <div class="overlay">
+  <section id="hero">
+    <div class="content">
       <h1>Akashdeep Gill</h1>
       <p>Self-Taught Developer | HTML, CSS, JS, Java, C++</p>
     </div>
-  </header>
+  </section>
 
-  <main>
-    <section>
-      <h2>About Me</h2>
-      <p>I am a self-taught developer skilled in building responsive and user-friendly websites. Passionate about learning and growing in the world of web development.</p>
-    </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am a self-taught developer skilled in building responsive and user-friendly websites. Passionate about learning and growing in the world of web development.</p>
+  </section>
 
-    <section>
-      <h2>Skills</h2>
-      <div class="skills">
-        <div class="card">HTML</div>
-        <div class="card">CSS</div>
-        <div class="card">JavaScript</div>
-        <div class="card">C++</div>
-        <div class="card">Java</div>
-      </div>
-    </section>
-
-    <section>
-      <h2>Projects</h2>
-      <div class="projects">
-        <div class="card">
-          <h3>DD Seed Karnal</h3>
-          <p>A simple static website for a seed-selling firm.</p>
-        </div>
-        <div class="card">
-          <h3>Portfolio</h3>
-          <p>This website you're viewing right now!</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Akashdeep Gill</p>
-  </footer>
-
+  <section id="skills">
+    <div class="skill-card">HTML</div>
+    <div class="skill-card">CSS</div>
+    <div class="skill-card">JavaScript</div>
+    <div class="skill-card">Java</div>
+    <div class="skill-card">C++</div>
+  </section>
 </body>
 </html>
