--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
     <div class="skill-card">Java</div>
     <div class="skill-card">C++</div>
   </section>
+
+  <footer>
+    <p>&copy; 2025 Akashdeep Gill | Built with ❤️ by me</p>
+  </footer>
 </body>
 </html>
