--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
   <section id="hero">
-    <div class="content">
-      <h1>Akashdeep Gill</h1>
-      <p>Self-Taught Developer | HTML, CSS, JS, Java, C++</p>
-    </div>
-  </section>
+  <h1>Hi, I'm Akashdeep Gill</h1>
+  <p>Frontend Web Developer</p>
+</section>
 
   <section id="about">
     <h2>About Me</h2>
