--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Hero Section -->
   <section id="hero">
-  <h1>Hi, I'm Akashdeep Gill</h1>
-  <p>Frontend Web Developer</p>
-</section>
+    <div class="content">
+      <h1>Hi, I'm Akashdeep Gill</h1>
+      <p>Frontend Web Developer | HTML, CSS, JS, Java, C++</p>
+    </div>
+  </section>
 
+  <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
     <p>I am a self-taught developer skilled in building responsive and user-friendly websites. Passionate about learning and growing in the world of web development.</p>
   </section>
 
+  <!-- Skills Section -->
   <section id="skills">
     <div class="skill-card">HTML</div>
     <div class="skill-card">CSS</div>
@@ -26,6 +31,7 @@
     <div class="skill-card">C++</div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Akashdeep Gill | Built with ❤️ by me</p>
   </footer>
